--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,20 @@
 
 
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tab_one"
-        android:id="@+id/view_pager_one"></android.support.v4.view.ViewPager>
+        android:id="@+id/view_pager_one"></androidx.viewpager.widget.ViewPager>
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tab_one"
 
         android:background="@color/colorPrimary"
 
-        ></android.support.design.widget.TabLayout>
+        ></com.google.android.material.tabs.TabLayout>
 
 
 
