--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,67 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:id="@+id/line_five"
     android:background="@drawable/shine"
     tools:context=".InputActivity">
-
-    <LinearLayout
+    <EditText
+        android:id="@+id/input_Titel"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:id="@+id/input_Titel"
-            android:textSize="25dp"
-            android:maxLength="20"
-            android:lines="1"
-            android:textColorHint="#ae8888"
-            android:typeface="serif"
-            android:hint="Titel"/>
-
-
-    </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="15dp"
-            android:orientation="vertical"
-            android:background="#ed062d"/>
-
-
-    <ScrollView
+        android:layout_height="?actionBarSize"
+        android:gravity="bottom"
+        android:hint="Titel"
+        android:lines="1"
+        android:maxLength="20"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColorHint="#ae8888"
+        android:textSize="25dp"
+        android:typeface="serif"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
+        android:layout_height="15dp"
+        android:background="#ed062d"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/input_Titel"
+        tools:layout_editor_absoluteX="-16dp" />
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
         <com.amir.ss.noteproject.LineEditText
+            android:id="@+id/input_Detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="bottom"
-            android:typeface="serif"
-            android:textColorHint="#ae8888"
-            android:id="@+id/input_Detail"
-            android:textSize="20dp"
+            android:hint="Enter Something"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:hint="Enter Something"/>
-
-    </LinearLayout>
-
-    </ScrollView>
-
-
-
-
-</LinearLayout>
+            android:textColorHint="#ae8888"
+            android:textSize="20dp"
+            android:typeface="serif" />
+    </androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
