--- a/app/src/main/res/layout/dialog_paint.xml
+++ b/app/src/main/res/layout/dialog_paint.xml
@@ -1,47 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <net.appitiza.android.drawingpad.drawpad.views.DrawingView
         android:id="@+id/my_pictrue2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"></net.appitiza.android.drawingpad.drawpad.views.DrawingView>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-
-    android:id="@+id/line_line"
-    android:layout_alignParentBottom="true"
-    android:weightSum="2"
-    android:layout_height="wrap_content">
-
-
+        android:layout_alignParentTop="true"
+        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_save"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save"
-
+        android:layout_weight="1"
         android:background="@drawable/gradint_for_bouuton"
+        android:text="Save"
         android:textColor="#d1d10b"
-        android:id="@+id/diloge_paint_save"
-        android:layout_weight="1"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_cancel" />
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_cancel"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/gradint_for_bouuton"
         android:text="Cancel"
         android:textColor="#d1d10b"
-        android:background="@drawable/gradint_for_bouuton"
-        android:id="@+id/diloge_paint_cancel"
-        android:layout_weight="1"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_save"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
-
-</LinearLayout>
-
-    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
