--- a/app/src/main/res/layout/draw_items.xml
+++ b/app/src/main/res/layout/draw_items.xml
@@ -4,20 +4,19 @@
     android:layout_width="match_parent"
     android:padding="5dp"
     android:id="@+id/mycustomline"
-    android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="170dp"
-        android:layout_height="230dp"
-        android:id="@+id/picture_draw"
+    android:layout_height="300dp">
 
-        android:scaleType="centerCrop"/>
+    <ImageView
+        android:id="@+id/picture_draw"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:scaleType="centerCrop" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Singer Name"
         android:textColor="#fff"
         android:textSize="5sp"
-
         android:gravity="center"
         android:id="@+id/draw_name"
         android:background="#55000000"
@@ -31,9 +30,4 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         />
-
-
-
-
-
 </RelativeLayout>
