--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view">
-        <com.amir.ss.noteproject.LineEditText
+        <com.amir.ss.noteproject.ui.widget.LineEditText
             android:id="@+id/input_Detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
